--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "./**/*.{js,jsx,ts,tsx,json}": "yarn eslint --fix",
-    "./**/*.{js,jsx,ts,tsx,css,md,json}": "yarn prettier --write  --config ./.prettierrc"
+	"./**/*.{js,jsx,ts,tsx,json}": "yarn lint:fix",
+	"./**/*.{js,jsx,ts,tsx,css,md,json}": "yarn format"
 }
