--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "next start",
 		"lint:fix": "next lint --fix",
 		"lint": "next lint",
-		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+		"format": "prettier --write .",
 		"prepare": "husky install",
 		"precommit": "lint-staged"
 	},
