--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,16 +22,9 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": [
-		"react",
-		"react-hooks",
-		"@typescript-eslint",
-		"prettier",
-		"jsx-a11y",
-		"import",
-		"eslint:recommended"
-	],
+	"plugins": ["react", "react-hooks", "@typescript-eslint", "prettier", "jsx-a11y", "import"],
 	"rules": {
+		"no-unused-vars": "error",
 		"react/react-in-jsx-scope": "off",
 		"camelcase": "error",
 		"spaced-comment": "error",
