--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint:fix": "next lint --fix",
+		"lint:fix": "eslint --fix",
 		"lint": "next lint",
 		"format": "prettier --write .",
-		"prepare": "husky install",
-		"precommit": "lint-staged"
+		"precommit": "lint-staged",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"next": "12.2.5",
@@ -30,12 +30,12 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-next": "^0.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.13",
 		"tailwindcss": "^3.1.8",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"husky": "^8.0.0"
 	}
 }
