--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^4.2.3",
+		"@tanstack/react-query-devtools": "^4.2.3",
+		"axios": "^0.27.2",
+		"daisyui": "^2.24.0",
+		"iconsax-react": "^0.0.8",
 		"next": "12.2.5",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"sass": "^1.54.5"
 	},
 	"devDependencies": {
 		"@types/node": "18.7.13",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.0.0",
 		"autoprefixer": "^10.4.8",
 		"eslint": "8.23.0",
 		"eslint-config-next": "12.2.5",
@@ -30,12 +37,12 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-next": "^0.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"husky": "^8.0.0",
 		"lint-staged": "^13.0.3",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.13",
 		"tailwindcss": "^3.1.8",
-		"typescript": "4.7.4",
-		"husky": "^8.0.0"
+		"typescript": "4.7.4"
 	}
 }
