--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"daisyui": "^2.24.0",
 		"iconsax-react": "^0.0.8",
 		"next": "12.2.5",
+		"plyr-react": "^5.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-use-downloader": "^1.1.7",
 		"sass": "^1.54.5"
 	},
 	"devDependencies": {
