--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"plyr-react": "^5.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-toastify": "^9.0.8",
 		"react-use-downloader": "^1.1.7",
 		"sass": "^1.54.5"
 	},
@@ -35,7 +36,7 @@
 		"eslint": "8.23.0",
 		"eslint-config-next": "12.2.5",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-import-resolver-typescript": "^3.5.0",
+		"eslint-import-resolver-typescript": "^3.5.1",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-next": "^0.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
