--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.2",
 		"@tanstack/react-query": "^4.2.3",
-		"@tanstack/react-query-devtools": "^4.2.3",
+		"@tanstack/react-query-devtools": "^4.3.9",
 		"axios": "^0.27.2",
 		"daisyui": "^2.24.0",
 		"iconsax-react": "^0.0.8",
@@ -24,9 +25,11 @@
 		"react-dom": "18.2.0",
 		"react-toastify": "^9.0.8",
 		"react-use-downloader": "^1.1.7",
-		"sass": "^1.54.5"
+		"sass": "^1.54.5",
+		"swiper": "^8.4.2"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^6.3.1",
 		"@types/node": "18.7.13",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
