--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"sass": "^1.54.5"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^6.3.1",
 		"@types/node": "18.7.13",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
