--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.2",
 		"@tanstack/react-query": "^4.2.3",
 		"@tanstack/react-query-devtools": "^4.3.9",
 		"axios": "^0.27.2",
