--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-toastify": "^9.0.8",
 		"react-use-downloader": "^1.1.7",
 		"sass": "^1.54.5",
+		"sharp": "^0.31.0",
 		"swiper": "^8.4.2"
 	},
 	"devDependencies": {
